--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<button type="button" class="btn btn-primary"><a href="https://dcaclab.com/users/28506/profile">Md. Anisur
 				Rahman Likhon</a></button>
 		<button type="button" class="btn btn-primary"><a
-				href="https://ca782906-6155-4b63-95ff-5e70f2f84cd7-00-zbuf516yiy9j.global.replit.dev/">AVR8 Circuit Simulator</a></button>
+				href="AVR8Circuit.html">AVR8 Circuit Simulator</a></button>
 	</center>
 
 
