--- a/AVR8Circuit.html
+++ b/AVR8Circuit.html
@@ -10,7 +10,7 @@
 <br>
 <br>
 <center>
-	<button type="button" class="btn btn-primary"><a href="https://5bd11adf-d261-44db-8edf-21cf6f872424-00-1jc6hhl9q8mdi.global.replit.dev/">Main Circuit
+	<button type="button" class="btn btn-primary"><a href="index.html">Main Circuit
 			Simulator</a></button>
 	<button type="button" class="btn btn-primary"><a href="https://dcaclab.com/users/28506/profile">Md. Anisur
 			Rahman Likhon</a></button>
